# WenShape

./: .editorconfig  .env.example  .gitignore  DEBUG_INSTRUCTIONS.md  LICENSE  NOVIX.spec  README.en.md  README.md  WenShape.spec  build_release.py  cleanup.bat  gamma_script.md  market.md  start.bat  start.py  start.sh
backend/: .env.example  config.yaml  pyproject.toml  requirements.txt  run.bat  run.sh
backend/app/: config.py  main.py  prompts.py
backend/app/agents/: _fanfiction_mixin.py  _summary_mixin.py  archivist.py  base.py  batch_extractor.py  editor.py  extractor.py  reviewer.py  writer.py
backend/app/context/: retriever.py
backend/app/context_engine/: budget_manager.py  budgeter.py  compressor.py  select_engine.py  smart_compressor.py  text_tokenizer.py  token_counter.py  trace_collector.py
backend/app/llm_gateway/: errors.py  gateway.py
backend/app/orchestrator/: _analysis_mixin.py  _context_mixin.py  orchestrator.py  orchestrator_helpers.py
backend/app/prompt_templates/: __init__.py  archivist.py  archivist_core.py  archivist_fanfiction.py  archivist_summary.py  compressor.py  editor.py  extractor.py  guidance.py  retrieval.py  shared.py  writer.py
backend/app/routers/: __init__.py  canon.py  config_llm.py  drafts.py  export.py  fanfiction.py  memory_pack.py  projects.py  proxy.py  session.py  volumes.py  (+1 more)
backend/scripts/: check_requirements_installed.py
backend/static/: index.html
backend/tests/: conftest.py  test_archivist_prompts.py  test_config.py  test_editor_locator.py  test_router_regressions.py  test_storage.py  test_utils.py
(+148 files in other folders)
